--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -2,7 +2,10 @@
 <p><%= link_to 'New Person', new_person_path %></p>
 <% @people.each do |person| %>
   <h2><%= person.first_name%></h2>
-  <%= link_to 'Show Person', person_path(person)%>
+  <%= link_to 'Show', person_path(person)%>
+  <%= link_to 'Edit', edit_person_path(person)%>
+  <%= link_to 'Delete', person, method: :delete%>
+  
 
 <% end %>
 
